Updates styles of layout elements

--- a/public/index.html
+++ b/public/index.html
@@ -256,7 +256,7 @@
 
                     <div class="card--gallery lower extended">
                         <div class="card--gallery-inner lower-text">
-                            <p>WyldGreens is a custom built single page layout that guides the customer through learning about the product/service, selecting products,
+                            <p>Wyldgreens is a custom built single page layout that guides the customer through learning about the product/service, selecting products,
                                 and placing an order. I designed it to be user friendly while maintaining a unified presentation across all devices. I collaborated with
                                 a UX writer to make the copy instructive and compelling, while being as efficient as possible to ensure no content loss on mobile.</p>
                             <ul>
@@ -732,7 +732,7 @@
                         </div>
                     </div>
 
-                    <div class="card--gallery lower" style="height: 300px">
+                    <div class="card--gallery lower" >
                         <div class="card--gallery-inner lower-text">
                             <p>
                                 uLog is a lightweight test package for JavaScript and Node.js, designed to verify function returns and log test data to a .txt file in the project directory.
@@ -755,7 +755,7 @@
                             <span class="sub-items">workflow tool</span>
                             <h4>Tech</h4>
                             <ul>
-                                <li><span class="tech-item">JavaScript ES6</span></li>
+                                <li><span class="tech-item">Node</span></li>
                             </ul>
                             <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/js--tdd', target='_blank')">
                                 View GitHub Repo
@@ -776,7 +776,7 @@
                         </div>
                     </div>
 
-                    <div class="card--gallery lower" style="height: 320px">
+                    <div class="card--gallery lower">
                         <div class="card--gallery-inner lower-text">
                             <p>
                                 MetaQuery DB is a desktop application facilitating queries across multiple databases through a unified user interface.
@@ -841,6 +841,7 @@
                                 React<br />
                                 Angular<br />
                                 Python<br />
+                                Node
                             </p>
                         </div>
                     </div>
@@ -848,7 +849,8 @@
                     <div class="inner2-skill-container">
                         <div class="skill-row-center">
                             <p class="skill-text">
-                                JS / TS / Node<br />
+                                JavaScript<br />
+                                TypeScript<br />
                                 OpenLayers<br />
                                 Highcharts
                             </p>
@@ -858,9 +860,10 @@
                     <div class="inner2-skill-container on-break">
                         <div class="skill-row-center">
                             <p class="skill-text">
-                                Express<br />
-                                SQL / NoSQL<br />
                                 Firebase<br />
+                                SQL<br />
+                                NoSQL<br />
+                                Express<br />
                             </p>
                         </div>
                     </div>
@@ -870,7 +873,7 @@
         <div class="banner">
             <div>
                 <h2 class="text-only-full-cell">
-                    Clearly delivering information is the key to success.
+                    <em>Clearly delivering information is the key to success.</em>
                 </h2>
             </div>
         </div>
