--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,9 @@
                     </p>
                     <button class="github-btn" 
                     style="
-                        width: 180px;
+                        width: 200px;
                         position: relative;
                         bottom: -23px;
-                        font-size: 15px;
                         transform: none;
                         left: -1px; "
                     type="button" 
@@ -450,7 +449,7 @@
                         </div>
                         <div class="gallery-right-section">
                             <a href="https://codestasher.com" target="_blank">Codestasher</a>
-                            <span class="sub-items">Version 2.0</span>
+                            <span class="sub-items">in-production</span>
                             <h4>Tech</h4>
                             <ul class="tech-items">
                                 <li>React</li>
